Include another useful Boto configuration parameter in the sample.

--- a/config.ini.sample
+++ b/config.ini.sample
@@ -24,3 +24,4 @@ age = 7	; Threshold, in days (required)
 ; Advanced: Merge the following values into Boto's configuration
 ;[Boto]
 ;debug = 2
+;is_secure = False
